--- a/shopMTS/templates/searchresults.html
+++ b/shopMTS/templates/searchresults.html
@@ -1,21 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}
-<title>Shop MTS</title>
-{% endblock title %}
-
 {% block body %}
-
-
-    {% load static %}
-
 <section>
     <div class="container m-3">
         <div class="row">
-        {% for i in products %}
+        {% for i in product %}
         <div class="col">
-        <div class="card shadow-lg" style="width: 18rem; margin-bottom:15px">
-            <img src="{{i.image}}" class="card-img-top" alt="{{i.id}}" height="320" weight="100">
+        <div class="card" style="width: 18rem; margin-bottom:15px">
+            <img src="{{i.image.url}}" class="card-img-top" alt="{{i.id}}" height="320" weight="100">
             <div class="card-body">
                 <p><h5 class="card-title">{{i.name}}</h5></p>
                 <p><h5 class="text-danger">Цена: {{i.price}}</h5></p>
@@ -29,6 +21,4 @@
         </div>
     </div>
 </section>
-    <br><a href="admin/">Вход админа</a><br/>
-
 {% endblock body %}
